...
                }
                DropdownMenu(
                    expanded = expanded,
                    onDismissRequest = { expanded = false }
                ) {
                    DropdownMenuItem(
                        text = { Text("Adicionar 1 Medicamento") },
                        onClick = {
                            expanded = false
                            onAddMedicationClick()
                        }
                    )
                    DropdownMenuItem(
                        text = { Text("Adicionar Múltiplos") },
                        onClick = {
                            expanded = false
                            onBulkAddMedicationClick()
                        }
                    )
                }
...
